Update Exercise 6.4- Supervised Machine Learning- Regression.ipynb

--- a/03 Scripts/Exercise 6.4- Supervised Machine Learning- Regression.ipynb
+++ b/03 Scripts/Exercise 6.4- Supervised Machine Learning- Regression.ipynb
@@ -5,7 +5,7 @@
    "id": "97dadbfd-a707-4290-af1e-719506efe3d2",
    "metadata": {},
    "source": [
-    "# Open Source Data Analysis- Geographical Visualizations"
+    "# Open Source Data Analysis- Regression"
    ]
   },
   {
